--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,17 @@
 spring.security.oauth2.client.registration.google.client-id=357226243122-9g5vd4gq200ouac7mmigrh5ms9ts9309.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=Hp7CAcYiEV613eW9aUZygFgb
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+# registration
+spring.security.oauth2.client.registration.naver.client-id=BglSYgWqvjTAkbAD1VN0
+spring.security.oauth2.client.registration.naver.client-secret=qkxzBLhekH
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user_name_attribute=response
